--- a/README
+++ b/README
@@ -1,5 +1,22 @@
-日本語訳について議論、誤りを報告、改善に参加するにはこちらをご覧ください:
-http://forum.tampermonkey.net/viewtopic.php?t=235
+------------------------------------------------------------
+Tampermonkey Japanese translation
+
+Tampermonkey is the most popular userscript manager for Google Chrome.
+
+------------------------------------------------------------
+(Japanese)
+Tampermonkey 日本語版 言語ファイル
+
+Tampermonkey は最も人気がある Google Chrome 用の UserScript マネージャーです。
+
+------------------------------------------------------------
+Tampermonkey
+https://chrome.google.com/webstore/detail/tampermonkey/dhdgffkkebhmkfjojejmpbldmpobfkfo
+
+Tampermonkey Beta
+https://chrome.google.com/webstore/detail/tampermonkey-beta/gcalenpjmijncebpfijmoaglllgpjagf
 
 To discuss, report an error, participate and help improve the Japanese translation, Please visit:
+日本語訳について議論、誤りを報告、改善に参加するにはこちらをご覧ください:
 http://forum.tampermonkey.net/viewtopic.php?t=235
+------------------------------------------------------------
